--- a/.github/workflows/compilar.yml
+++ b/.github/workflows/compilar.yml
@@ -5,7 +5,8 @@ jobs:
     runs-on: windows-latest
     steps:
       - uses: actions/checkout@v2
-      - run: dotnet build
+      - name: compilamos
+        run: dotnet build
       - name: Ejecutamos las pruebas
         run: donet test
       
