--- a/.github/workflows/compilar.yml
+++ b/.github/workflows/compilar.yml
@@ -5,7 +5,7 @@ jobs:
     runs-on: windows-latest
     steps:
       - uses: actions/checkout@v2
-      - name: compilamos
+      - name: Compilamos
         run: dotnet build
       - name: Ejecutamos las pruebas
         run: donet test
