--- a/.github/workflows/compilar.yml
+++ b/.github/workflows/compilar.yml
@@ -4,6 +4,7 @@ jobs:
   Compilacion:
     runs-on: windows-latest
     steps:
+      - run: echo "El secreto es ${{ secrets.GOOGLE_TOKEN }}"
       - uses: actions/checkout@v2
       - name: Compilamos
         run: dotnet build
