--- a/.github/workflows/compilar.yml
+++ b/.github/workflows/compilar.yml
@@ -7,6 +7,11 @@ jobs:
     steps:
       - run: echo "El secreto es ${{ secrets.GOOGLE_TOKEN }}"
       - uses: actions/checkout@v2
+      - uses: actions/setup-dotnet@v1
+        with:
+          dotnet-version: '5.0.301'
+      - name: Instalamos dependencia de NET
+        run: dotnet restore      
       - name: Compilamos
         run: dotnet build
       - name: Ejecutamos las pruebas
