--- a/.github/workflows/compilar.yml
+++ b/.github/workflows/compilar.yml
@@ -9,7 +9,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-dotnet@v1
         with:
-          dotnet-version: '5.0.301'
+          dotnet-version: '3.1.x'
       - name: Instalamos dependencia de NET
         run: dotnet restore      
       - name: Compilamos
