--- a/.github/workflows/compilar.yml
+++ b/.github/workflows/compilar.yml
@@ -19,7 +19,7 @@ jobs:
       - name: Publicar un release
         uses: elgohr/Github-Release-Action@master
         env:
-          GITHUB_TOKEN: ${{ secrets.RELEASE_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           args: Nuevo Release
       
